# EasyRide

./: README.md
backend/: .gitignore  car_end.py  cars.csv  chat_ws_end.py  database.py  main.py  pyproject.toml
backend/agent/: langg.py  langg_tools.py  propmt  ws_path_temp.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: CarCard.jsx  CarCards.jsx  Footer.jsx  Header.jsx  Layout.jsx
frontend/src/pages/: About.jsx  Ai.jsx  NotExist.jsx
frontend/src/pages/Landing/: Landing.jsx
frontend/src/pages/bookings/: Bookings.jsx
frontend/src/pages/cars/: CarDetail.jsx  Cars.jsx
frontend/src/pages/landing/: Landing.jsx
frontend/src/styles/: about.css  ai.css  booking.css  carCard.css  carDetail.css  cars.css  footer.css  header.css  index.css  landing.css  layout.css  notExist.css
